# HYWDBG

./: .gitignore  Cargo.toml  LICENSE  README.md  build-dist.ps1  build.ps1  package-lock.json  release-publish.ps1  run-core.ps1  start-qt.ps1  start-slint.ps1  start.ps1  sync.bat
.github/workflows/: build.yml
apps/hywdbg-core-daemon/: Cargo.toml
apps/hywdbg-core-daemon/src/: main.rs
apps/hywdbg-qt/: CMakeLists.txt
apps/hywdbg-qt/src/: commands.cpp  debugger.cpp  dialogs.cpp  disasm.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  memory.cpp  registers.cpp  rpc.cpp  split_main.py  userdata.cpp
apps/hywdbg-slint/: Cargo.toml
apps/hywdbg-slint/src/: main.rs
apps/hywdbg-slint/ui/: app.slint
apps/hywdbg-tauri/: README.md  index.html  package.json
apps/hywdbg-tauri/src/: main.ts  style.css
apps/hywdbg-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/hywdbg-tauri/src-tauri/capabilities/: default.json
apps/hywdbg-tauri/src-tauri/src/: lib.rs  main.rs
backends/dbgeng-backend/: Cargo.toml
backends/dbgeng-backend/src/: dbgeng_ffi.rs  main.rs
backends/frida-backend/: Cargo.toml
backends/frida-backend/src/: frida_bridge.rs  main.rs
backends/gdbremote-backend/: Cargo.toml
backends/gdbremote-backend/src/: gdbremote_codec.rs  main.rs
backends/lldb-backend/: Cargo.toml
backends/lldb-backend/src/: lldb_bridge.rs  main.rs
backends/titan-backend/: Cargo.toml
backends/titan-backend/src/: main.rs  titan_ffi.rs
backends/winapi-backend/: Cargo.toml
backends/winapi-backend/src/: main.rs  winapi_impl.rs
bridges/: README.md
crates/hywdbg-backend-common/: Cargo.toml
crates/hywdbg-backend-common/src/: lib.rs
crates/hywdbg-core/: Cargo.toml
crates/hywdbg-core/src/: backend_process.rs  core.rs  lib.rs
crates/hywdbg-protocol/: Cargo.toml
crates/hywdbg-protocol/src/: lib.rs
crates/titanengine-sys/: Cargo.toml  TitanEngine.h  build.rs  wrapper.h
deps_titan/prebuilt/: TitanEngine.exp  TitanEngine.lib
doc/: README_BUILD_DIST.md  README_DIST_SCRIPT_FIX.md  README_QT_RPC_FIX.md  README_QT_UI_PATCH.md  README_X64DBG_LIKE_SLINT_PATCH.md  protocol.md  roadmap.md
examples/: manual-smoke-test.ps1
tools/: hywctl.py
