[package]
name = "hywdbg-core-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hywdbg-core = { path = "../../crates/hywdbg-core" }
hywdbg-protocol = { path = "../../crates/hywdbg-protocol" }
