[package]
name = "hywdbg-slint"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
slint.workspace = true
rfd.workspace = true
hywdbg-protocol = { path = "../../crates/hywdbg-protocol" }

[build-dependencies]
slint-build.workspace = true
