[package]
name = "titan-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
iced-x86.workspace = true
hywdbg-protocol = { path = "../../crates/hywdbg-protocol" }
hywdbg-backend-common = { path = "../../crates/hywdbg-backend-common" }
titanengine-sys = { path = "../../crates/titanengine-sys" }
