[package]
name = "titan-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
iced-x86.workspace = true
hywdbg-protocol = { path = "../../crates/hywdbg-protocol" }
hywdbg-backend-common = { path = "../../crates/hywdbg-backend-common" }
titanengine-sys = { path = "../../crates/titanengine-sys" }
lazy_static = "1.5.0"
sysinfo = "0.30"
windows-sys = { version = "0.59", features = ["Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_Foundation", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Memory"] }
