[package]
name = "winapi-backend"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
hywdbg-protocol = { path = "../../crates/hywdbg-protocol" }
hywdbg-backend-common = { path = "../../crates/hywdbg-backend-common" }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
] }
iced-x86.workspace = true
